<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brayadiaz.formularioderegistro.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registro"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="@color/orangered"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/loggin"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/cLoggin"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:id="@+id/cUser"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pass1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/cPass1"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:id="@+id/cPass1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pass2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/cPass2"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:id="@+id/cPass2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/cEmail"
                android:textColorHint="@color/gray"
                android:inputType="textEmailAddress"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:id="@+id/cEmail"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sexo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/masculino"
                    android:checked="true"
                    android:id="@+id/masculino"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/femenino"
                    android:id="@+id/femenino"
                    />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/cDate"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:focusable="false"
                android:id="@+id/cDate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cCity"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hobbies"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textSize="20sp"
                    android:text="@string/jugar"
                    android:id="@+id/jugar"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textSize="20sp"
                    android:text="@string/bailar"
                    android:id="@+id/bailar"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textSize="20sp"
                    android:text="@string/cocinar"
                    android:id="@+id/cocinar"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/leer"
                    android:textSize="20sp"
                    android:id="@+id/leer"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@color/orangered"
                android:textAllCaps="false"
                android:id="@+id/boton"
                android:onClick="Aceptar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/info"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:id="@+id/info"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>
